// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`группирует опции согласно словарю 1`] = `
Array [
  Object {
    "groupName": "Комфорт",
    "options": Array [
      "cruise-control",
      "condition",
      "cooling-box",
      "computer",
      "electro-mirrors",
    ],
  },
  Object {
    "groupName": "Обзор",
    "options": Array [
      "ptf",
      "light-cleaner",
      "mirrors-heat",
    ],
  },
  Object {
    "groupName": "Безопасность",
    "options": Array [
      "airbag-passenger",
      "abs",
      "esp",
    ],
  },
]
`;

exports[`добавляет в список только опции, которые есть в комплектациях 1`] = `
Array [
  "cruise-control",
  "condition",
  "cooling-box",
  "computer",
  "electro-mirrors",
  "ptf",
  "light-cleaner",
  "mirrors-heat",
  "airbag-passenger",
  "abs",
  "esp",
]
`;

exports[`правильно формирует флаги отображения если опции нет в одной из модификаций 1`] = `
Object {
  "isBaseForAllMods": false,
  "isMixed": false,
  "isNotBaseForAllMods": true,
  "name": "Active",
  "price": 0,
}
`;

exports[`правильно формирует флаги отображения если опции нет в одной из модификаций, а в другой она платная 1`] = `
Object {
  "isBaseForAllMods": false,
  "isMixed": true,
  "isNotBaseForAllMods": false,
  "name": "Ambition",
  "price": 0,
}
`;

exports[`правильно формирует флаги отображения если опция есть во всех модификациях 1`] = `
Object {
  "isBaseForAllMods": true,
  "isMixed": false,
  "isNotBaseForAllMods": false,
  "name": "Active",
  "price": 0,
}
`;

exports[`правильно формирует флаги отображения если опция платная во всех модификациях 1`] = `
Object {
  "isBaseForAllMods": false,
  "isMixed": false,
  "isNotBaseForAllMods": false,
  "name": "Hockey Edition",
  "price": 32000,
}
`;
